--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,7 @@
 services:
   - type: web
-    name: t64helper_bot
+    name: t64helper
     env: python
+    plan: free
     buildCommand: ""
     startCommand: python main.py
-    envVars:
-      - key: BOT_TOKEN
-        value: your_bot_token_here
-      - key: ADMIN_ID
-        value: "1835516062"
