--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: t64helper
     env: python
     plan: free
-    buildCommand: ""
+    buildCommand: pip install -r requirements.txt
     startCommand: python main.py
