--- a/env.example
+++ b/env.example
@@ -1,2 +1,5 @@
-BOT_TOKEN=ваш_токен_бота_здесь
-ADMIN_ID=1835516062
+BOT_TOKEN = os.getenv("BOT_TOKEN")
+ADMIN_CHAT_ID = os.getenv("ADMIN_CHAT_ID")
+FORM_URL = os.getenv("FORM_URL")
+SHEET_NAME = os.getenv("SHEET_NAME")
+GOOGLE_SHEET_ID = os.getenv("GOOGLE_SHEET_ID")
