--- a/env.example
+++ b/env.example
@@ -1,2 +1,2 @@
-BOT_TOKEN = os.getenv("BOT_TOKEN")
-ADMIN_CHAT_ID = os.getenv("ADMIN_CHAT_ID")
+BOT_TOKEN = 7447394326:AAFZwj6LcxTt-LuG18c-dktOUuHoaQZ-GXc
+ADMIN_CHAT_ID = 1835516062
